# FineTuneGemma

./: .env_example  FineTune.ipynb  README.md  create_subset_dataset.py  inference.ipynb  inference_cpu.ipynb  pyproject.toml
fineTune/: colab_requirements.txt  inference_cpu.py  inference_gpu.py  monitor_training.py  prepare_data.py  test.py  train.py  visualize_data.py
fineTune/configs/: configs.yaml
fineTune/data_pipeline/: __init__.py  data_viewer.py  dataset_extraction.py  dataset_loader.py  dataset_transformation.py
fineTune/utils/: __init__.py  capture_key_libs.py  colab_utils.py  env_utils.py  gpu_stats.py  logging_callback.py  make_clean_dir.py  model_exporter.py  training_analyzer.py
