[project]
name = "FineTuneGemma"
version = "0.1.0"
description = "FineTuneGemma"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "datasets>=4.0.0",
    "gdown>=5.2.0",
    "google-generativeai>=0.8.5",
    "gtts>=2.5.4",
    "hf-xet>=1.1.7",
    "keras>=3.11.2",
    "keras-hub>=0.19.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "mediapipe==0.10.9",
    # "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "peft>=0.17.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.48.1",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
    "trl>=0.21.0",
    "unsloth>=2025.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "notebook>=7.4.5",
    "rich>=14.1.0",
    "ipywidgets>=8.0.0",
    "ego4d>=1.7.3",
    "nbstripout>=0.8.1",
]

[tool.isort]
skip = ["unsloth"]

